--- a/huddle-landing-page-with-single-introductory-section-master/style.css
+++ b/huddle-landing-page-with-single-introductory-section-master/style.css
@@ -10,30 +10,41 @@
 body{
 	font-family: 'Open Sans', sans-serif;
 	background-color: hsl(257, 40%, 49%);
+}
+div{
 	background-image: url('./images/bg-mobile.svg');
+	margin-bottom: 10%;
 }
 header{
-	height: 180px;
+	height: 80px;
+	width: 85%;
 	padding-top: 30px;
 	padding-left: 20px;
-
-}
-header img{
-	width: 40%;
-	margin-bottom: 5%;
+	margin-bottom:10% ;
 }
 div img{
 	width: 85vw;
 	margin: 0 5% 5% 5%;
 }
-div h2{
+header img{
+	width: 50vw;
+	margin-bottom: 5%;
+}
+
+.aside{
+	width: 100vw;
+    background-image: none;
+}
+.aside h2{
+	width: 80vw;
 	text-align: center;
 	font-family: 'Poppins' , sans-serif;
 	color:white;
 	font-weight: 600;
-	font-size: 2.5rem;
+	font-size: 2rem;
+	margin: 0 10% 0 10%;
 }
-div p {
+.aside p {
 	color: white;
 	text-align: center;
 	font-weight: 400;
@@ -41,7 +52,7 @@ div p {
 	padding: 10px;
 	line-height: 2.5rem;
 }
-div button{
+.aside button{
 	width: 55%;
 	height: 50px;
 	margin: 0 22% 10% 22%;
